# csvToMermaidGantt

./: README.md  csv_to_mermaid_gantt.py  pyproject.toml
src/csv_to_mermaid_gantt/: __init__.py  html_visualizations.py  log_processor.py
tests/: test_auto_detection.py  test_csv_to_mermaid_gantt.py  test_html_visualizations.py  test_log_processor.py
